# meltano-rocksdb-state-backend

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/: dependabot.yaml  renovate.json5
.github/workflows/: constraints.txt  release.yaml  test.yaml
fixtures/project/: meltano.yml
src/meltano_rocksdb_state_backend/: rocksdb.py
src/meltano_state_backend_rocksdb/: __init__.py
tests/: conftest.py  test_rocksdict_backend.py
